Fix adv filter select
Advanced Filter select ALL/ANY is out of place.

--- a/assets/css/scss/admin-metabox-panel.scss
+++ b/assets/css/scss/admin-metabox-panel.scss
@@ -114,9 +114,5 @@
       margin-left: 8px;
     }
 
-    select {
-      float: left;
-    }
-
   }
 }
